--- a/templates/index.html
+++ b/templates/index.html
@@ -245,7 +245,7 @@
 
       .features h2 {
         font-size: 18px;
-        color: #222;
+        color: #ffffff;
         margin-bottom: 10px;
         font-weight: 700;
       }
@@ -258,7 +258,7 @@
 
       .feature-card {
         flex: 1 1 220px;
-        background: #fff;
+        background: #190000;
         border-radius: 10px;
         padding: 12px;
         box-shadow: 0 6px 18px rgba(20, 20, 30, 0.035);
